Type database for 'datetime' stdlib module (PY-4273)

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -1130,6 +1130,202 @@ __builtin__.file.writelines = \
   :type sequence_of_strings: collections.Iterable of string \n\
 
 
+## 8.1. datetime
+
+datetime.date.today = \
+  :rtype: datetime.date \n\
+
+datetime.date.fromtimestamp = \
+  :rtype: datetime.date \n\
+
+datetime.date.fromordinal = \
+  :rtype: datetime.date \n\
+
+datetime.date.replace = \
+  :rtype: datetime.date \n\
+
+datetime.date.toordinal = \
+  :rtype: int \n\
+
+datetime.date.weekday = \
+  :rtype: int \n\
+
+datetime.date.isoweekday = \
+  :rtype: int \n\
+
+datetime.date.isocalendar = \
+  :rtype: (int, int, int) \n\
+
+datetime.date.isoformat = \
+  :rtype: bytes \n\
+
+datetime.date.ctime = \
+  :rtype: bytes \n\
+
+datetime.date.strftime = \
+  :type format: string \n\
+  :rtype: string \n\
+
+datetime.date.__add__ = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.date \n\
+
+datetime.date.__radd__ = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.date \n\
+
+datetime.date.__sub__ = \
+  :type y: datetime.date or datetime.timedelta \n\
+  :rtype: datetime.date or datetime.timedelta \n\
+
+datetime.date.__rsub__ = \
+  :type y: datetime.date \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.time.isoformat = \
+  :rtype: bytes \n\
+
+datetime.time.strftime = \
+  :type format: string \n\
+  :rtype: string \n\
+
+datetime.time.utcoffset = \
+  :rtype: datetime.timedelta or None \n\
+
+datetime.time.dst = \
+  :rtype: datetime.timedelta or None \n\
+
+datetime.ime.tzname = \
+  :rtype: string \n\
+
+datetime.timedelta.__add__ = \
+  :type y: datetime.timedelta or datetime.date or datetime.datetime \n\
+  :rtype: datetime.timedelta or datetime.date or datetime.datetime \n\
+
+datetime.timedelta.__radd__ = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.timedelta.__sub__ = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.timedelta.__rsub__ = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.timedelta.__mul__ = \
+  :type y: int or long \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.timedelta.__rmul__ = \
+  :type y: int or long \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.timedelta.__div__ = \
+  :type y: int or long \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.timedelta.__truediv__ = \
+  :type y: int or long \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.datetime.today = \
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.now = \
+  :type tz: datetime.tzinfo or None \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.utcnow = \
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.fromtimestamp = \
+  :type timestamp: string \n\
+  :type tz: datetime.tzinfo or None \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.utcfromtimestamp = \
+  :type timestamp: string \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.fromordinal = \
+  :type ordinal: int \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.combine = \
+  :type date: datetime.date \n\
+  :type time: datetime.time \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.strptime = \
+  :type date_string: string \n\
+  :type format: string \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.date = \
+  :rtype: datetime.date \n\
+
+datetime.datetime.time = \
+  :rtype: datetime.time \n\
+
+datetime.datetime.timetz = \
+  :rtype: datetime.time \n\
+
+datetime.datetime.replace = \
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.astimezone = \
+  :type tz: datetime.tzinfo \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.utcoffset = \
+  :rtype: datetime.timedelta or None \n\
+
+datetime.datetime.dst = \
+  :rtype: datetime.timedelta or None \n\
+
+datetime.datetime.tzname = \
+  :rtype: string \n\
+
+datetime.datetime.toordinal = \
+  :rtype: int \n\
+
+datetime.datetime.weekday = \
+  :rtype: int \n\
+
+datetime.datetime.isoweekday = \
+  :rtype: int \n\
+
+datetime.datetime.isocalendar = \
+  :rtype: (int, int, int) \n\
+
+datetime.datetime.isoformat = \
+  :rtype: bytes \n\
+
+datetime.datetime.ctime = \
+  :rtype: bytes \n\
+
+datetime.datetime.strftime = \
+  :type format: string \n\
+  :rtype: string \n\
+
+datetime.datetime.__add__ = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.__radd__ = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.datetime \n\
+
+datetime.datetime.__sub__ = \
+  :type y: datetime.datetime or datetime.timedelta \n\
+  :rtype: datetime.datetime or datetime.timedelta \n\
+
+datetime.datetime.__rsub__ = \
+  :type y: datetime.datetime \n\
+  :rtype: datetime.timedelta \n\
+
 ## 9.4. decimal
 
 decimal.Decimal.as_tuple = \
