Bytes and unicode types for files opened in binary and text modes

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -98,6 +98,14 @@ __builtin__.open = \
   :type errors: string or None \n\
   :rtype: file \n\
 
+__builtin__.open.1 = \
+  :type mode: unicode \n\
+  :rtype: io.TextIOWrapper \n\
+
+__builtin__.open.2 = \
+  :type mode: bytes \n\
+  :rtype: io.FileIO \n\
+
 __builtin__.ord = \
   :type c: string \n\
   :rtype: int \n\
@@ -1402,6 +1410,81 @@ decimal.Decimal.__neg__ = \
   :rtype: decimal.Decimal \n\
 
 
+## 15.2. io
+
+io.open = \
+  :type name: string \n\
+  :type mode: string \n\
+  :type buffering: int \n\
+  :type encoding: string or None \n\
+  :type errors: string or None \n\
+  :rtype: file \n\
+
+io.open.1 = \
+  :type mode: unicode \n\
+  :rtype: io.TextIOWrapper \n\
+
+io.open.2 = \
+  :type mode: bytes \n\
+  :rtype: io.FileIO \n\
+
+io.TextIOWrapper.read = \
+  :rtype: unicode \n\
+
+io.TextIOWrapper.readline = \
+  :rtype: unicode \n\
+
+io.TextIOWrapper.readlines = \
+  :rtype: list of unicode \n\
+
+io.TextIOWrapper.__iter__ = \
+  :rtype: list of unicode \n\
+
+io.TextIOWrapper.write = \
+  :type s: string \n\
+  :rtype: int \n\
+
+io.FileIO.read = \
+  :rtype: bytes \n\
+
+io.FileIO.readline = \
+  :rtype: bytes \n\
+
+io.FileIO.readlines = \
+  :rtype: list of bytes \n\
+
+io.FileIO.__iter__ = \
+  :rtype: list of bytes \n\
+
+io.FileIO.write = \
+  :type b: string \n\
+  :rtype: int \n\
+
+io.IOBase.readlines = \
+  :rtype: list of string \n\
+
+io.IOBase.writelines = \
+  :type lines: collections.Iterable of string \n\
+
+io.IOBase.__iter__ = \
+  :rtype: list of string \n\
+
+io.IOBase.next = \
+  :rtype: string \n\
+
+io._IOBase.readlines = \
+  :rtype: list of string \n\
+
+io._IOBase.writelines = \
+  :type lines: collections.Iterable of string \n\
+
+io._IOBase.__iter__ = \
+  :rtype: list of string \n\
+
+io._IOBase.next = \
+  :rtype: string \n\
+
+
 ## 18.2. json
 
 json.loads = \
@@ -1419,22 +1502,3 @@ base64.b64encode = \
 base64.b64decode = \
   :type s: bytes \n\
   :rtype: bytes \n\
-
-
-# DEBUG: Experimental
-
-__builtin__._open_bytes = \
-  :type name: unicode or bytes \n\
-  :type mode: unicode or bytes \n\
-  :type buffering: int \n\
-  :type encoding: unicode or None \n\
-  :type errors: unicode or None \n\
-  :rtype: _io.FileIO \n\
-
-__builtin__._open_unicode = \
-  :type name: unicode or bytes \n\
-  :type mode: unicode or bytes \n\
-  :type buffering: int \n\
-  :type encoding: unicode or None \n\
-  :type errors: unicode or None \n\
-  :rtype: _io.TextIOWrapper \n\
