Initial support for generic types in Python

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -34,17 +34,20 @@ __builtin__.divmod = \
   :rtype: (int or long or float, int or long or float) \n\
 
 __builtin__.enumerate.__init__ = \
-  :type iterable: collections.Iterable \n\
+  :type iterable: collections.Iterable of T \n\
   :type start: int or long \n\
-  :rtype: enumerate of (int, unknown) \n\
+  :rtype: enumerate of (int, T) \n\
 
 __builtin__.enumerate.__new__ = \
-  :rtype: enumerate of (int, unknown) \n\
+  :rtype: enumerate of (int, T) \n\
+
+__builtin__.enumerate.next = \
+  :rtype: (int, T) \n\
 
 __builtin__.filter = \
   :type function_or_none: collections.Callable or None \n\
-  :type sequence: collections.Iterable \n\
-  :rtype: list \n\
+  :type sequence: collections.Iterable of T \n\
+  :rtype: list of T \n\
 
 __builtin__.filter.1 = \
   :type sequence: bytes \n\
@@ -73,7 +76,8 @@ __builtin__.hash = \
   :rtype: int \n\
 
 __builtin__.iter = \
-  :rtype: collections.Iterable \n\
+  :type source: collections.Iterable of T \n\
+  :rtype: collections.Iterator of T \n\
 
 __builtin__.len = \
   :type p_object: collections.Sized \n\
@@ -1050,6 +1054,10 @@ __builtin__.tuple.__getitem__ = \
 
 ## 5.8 Mapping types
 
+__builtin__.dict.__init__ = \
+  :type seq: collections.Iterable of (T, V) \n\
+  :rtype: dict of (T, V) \n\
+
 __builtin__.dict.__getitem__ = \
   :type y: object \n\
   :rtype: unknown \n\
@@ -1076,7 +1084,7 @@ __builtin__.dict.has_key = \
   :rtype: bool \n\
 
 __builtin__.dict.items = \
-  :rtype: list of (unknown, unknown) \n\
+  :rtype: list of (T, V) \n\
 
 __builtin__.dict.iteritems = \
   :rtype: collections.Iterable of (unknown, unknown) \n\
@@ -1088,10 +1096,10 @@ __builtin__.dict.itervalues = \
   :rtype: collections.Iterable \n\
 
 __builtin__.dict.keys = \
-  :rtype: list \n\
+  :rtype: list of T \n\
 
 __builtin__.dict.values = \
-  :rtype: list \n\
+  :rtype: list of V \n\
 
 
 ## 5.9. File objects
@@ -1333,6 +1341,16 @@ datetime.datetime.__sub__ = \
 datetime.datetime.__rsub__ = \
   :type y: datetime.datetime \n\
   :rtype: datetime.timedelta \n\
+
+
+## 8.3. collections
+
+collections.Iterator.__init__ = \
+  :rtype: collections.Iterator of T \n\
+
+collections.Iterator.next = \
+  :rtype: T \n\
+
 
 ## 9.4. decimal
 
