Generic and overloaded types for Python operators

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -41,8 +41,11 @@ __builtin__.enumerate.__init__ = \
 __builtin__.enumerate.__new__ = \
   :rtype: enumerate of (int, T) \n\
 
+__builtin__.enumerate.__iter__ = \
+  :rtype: enumerate of (int, T) \n\
+
 __builtin__.enumerate.next = \
-  :rtype: (int, T) \n\
+  :rtype: (int, unknown) \n\
 
 __builtin__.filter = \
   :type function_or_none: collections.Callable or None \n\
@@ -66,7 +69,7 @@ __builtin__.getattr = \
   :rtype: unknown \n\
 
 __builtin__.globals = \
-  :rtype: dict from bytes to object
+  :rtype: dict of (bytes, object)
 
 __builtin__.hasattr = \
   :type name: string \n\
@@ -84,7 +87,7 @@ __builtin__.len = \
   :rtype: int \n\
 
 __builtin__.locals = \
-  :rtype: dict from bytes to object
+  :rtype: dict of (bytes, object)
 
 __builtin__.map = \
   :type function: collections.Callable \n\
@@ -92,7 +95,8 @@ __builtin__.map = \
   :rtype: list \n\
 
 __builtin__.next = \
-  :type iterator: collections.Iterator \n\
+  :type iterator: collections.Iterator of T \n\
+  :rtype: T \n\
 
 __builtin__.open = \
   :type name: string \n\
@@ -137,7 +141,7 @@ __builtin__.round = \
   :rtype: float \n\
 
 __builtin__.vars = \
-  :rtype: dict from bytes to object
+  :rtype: dict of (bytes, object)
 
 
 ## 5.4. Numeric types
@@ -971,25 +975,29 @@ __builtin__.unicode.zfill = \
   :type width: int or long \n\
   :rtype: unicode \n\
 
+__builtin__.list.__init__ = \
+  :type seq: collections.Iterable of T \n\
+  :rtype: list of T \n\
+
 __builtin__.list.__add__ = \
-  :type y: list \n\
-  :rtype: list \n\
+  :type y: list of T \n\
+  :rtype: list of T \n\
 
 __builtin__.list.__mul__ = \
   :type n: int or long \n\
-  :rtype: list \n\
+  :rtype: list of T \n\
 
 __builtin__.list.__rmul__ = \
   :type n: int or long \n\
-  :rtype: list \n\
+  :rtype: list of T \n\
 
 __builtin__.list.__getitem__ = \
   :type y: int \n\
-  :rtype: unknown \n\
+  :rtype: T \n\
 
 __builtin__.list.__setitem__ = \
   :type i: int \n\
-  :type y: object \n\
+  :type y: T \n\
   :rtype: None \n\
 
 __builtin__.list.__delitem__ = \
@@ -997,30 +1005,32 @@ __builtin__.list.__delitem__ = \
   :rtype: None \n\
 
 __builtin__.list.append = \
-  :type p_object: object \n\
+  :type p_object: T \n\
+  :rtype: None \n\
 
 __builtin__.list.extend = \
-  :type iterable: collections.Iterable \n\
+  :type iterable: collections.Iterable of T \n\
+  :rtype: None \n\
 
 __builtin__.list.count = \
-  :type value: object \n\
+  :type value: T \n\
   :rtype: int \n\
 
 __builtin__.list.index = \
-  :type value: object \n\
+  :type value: T \n\
   :type start: bool or int or long or None \n\
   :type stop: bool or int or long or None \n\
   :rtype: int \n\
 
 __builtin__.list.insert = \
   :type index: bool or int or long \n\
-  :type p_object: object \n\
+  :type p_object: T \n\
 
 __builtin__.list.pop = \
   :type index: bool or int or long \n\
 
 __builtin__.list.remove = \
-  :type value: object \n\
+  :type value: T \n\
 
 __builtin__.list.sort = \
   :type reverse: bool \n\
@@ -1059,41 +1069,41 @@ __builtin__.dict.__init__ = \
   :rtype: dict of (T, V) \n\
 
 __builtin__.dict.__getitem__ = \
-  :type y: object \n\
-  :rtype: unknown \n\
+  :type y: T \n\
+  :rtype: V \n\
 
 __builtin__.dict.__setitem__ = \
-  :type i: object \n\
-  :type y: object \n\
+  :type i: T \n\
+  :type y: V \n\
   :rtype: None \n\
 
 __builtin__.dict.__delitem__ = \
-  :type y: object \n\
+  :type y: T \n\
   :rtype: None \n\
 
 __builtin__.dict.copy = \
-  :rtype: dict \n\
+  :rtype: dict of (T, V) \n\
 
 __builtin__.dict.fromkeys = \
-  :type S: collections.Iterable \n\
-  :type v: object or None \n\
-  :rtype: dict \n\
+  :type S: collections.Iterable of T \n\
+  :type v: V or None \n\
+  :rtype: dict of (T, V) \n\
 
 __builtin__.dict.has_key = \
-  :type k: object \n\
+  :type k: T \n\
   :rtype: bool \n\
 
 __builtin__.dict.items = \
   :rtype: list of (T, V) \n\
 
 __builtin__.dict.iteritems = \
-  :rtype: collections.Iterable of (unknown, unknown) \n\
+  :rtype: collections.Iterable of (T, V) \n\
 
 __builtin__.dict.iterkeys = \
-  :rtype: collections.Iterable \n\
+  :rtype: collections.Iterable of T \n\
 
 __builtin__.dict.itervalues = \
-  :rtype: collections.Iterable \n\
+  :rtype: collections.Iterable of V \n\
 
 __builtin__.dict.keys = \
   :rtype: list of T \n\
@@ -1194,6 +1204,14 @@ datetime.date.__sub__ = \
   :type y: datetime.date or datetime.timedelta \n\
   :rtype: datetime.date or datetime.timedelta \n\
 
+datetime.date.__sub__.1 = \
+  :type y: datetime.date \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.date.__sub__.2 = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.date \n\
+
 datetime.date.__rsub__ = \
   :type y: datetime.date \n\
   :rtype: datetime.timedelta \n\
@@ -1217,6 +1235,18 @@ datetime.ime.tzname = \
 datetime.timedelta.__add__ = \
   :type y: datetime.timedelta or datetime.date or datetime.datetime \n\
   :rtype: datetime.timedelta or datetime.date or datetime.datetime \n\
+
+datetime.timedelta.__add__.1 = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.timedelta.__add__.2 = \
+  :type y: datetime.datetime \n\
+  :rtype: datetime.datetime \n\
+
+datetime.timedelta.__add__.3 = \
+  :type y: datetime.date \n\
+  :rtype: datetime.date \n\
 
 datetime.timedelta.__radd__ = \
   :type y: datetime.timedelta \n\
@@ -1337,6 +1367,14 @@ datetime.datetime.__radd__ = \
 datetime.datetime.__sub__ = \
   :type y: datetime.datetime or datetime.timedelta \n\
   :rtype: datetime.datetime or datetime.timedelta \n\
+
+datetime.datetime.__sub__.1 = \
+  :type y: datetime.datetime \n\
+  :rtype: datetime.timedelta \n\
+
+datetime.datetime.__sub__.2 = \
+  :type y: datetime.timedelta \n\
+  :rtype: datetime.datetime \n\
 
 datetime.datetime.__rsub__ = \
   :type y: datetime.datetime \n\
