Weak warnings for Python generic types

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -39,13 +39,14 @@ __builtin__.enumerate.__init__ = \
   :rtype: enumerate of (int, T) \n\
 
 __builtin__.enumerate.__new__ = \
+  :type more: collections.Iterable of T \n\
   :rtype: enumerate of (int, T) \n\
 
 __builtin__.enumerate.__iter__ = \
   :rtype: enumerate of (int, T) \n\
 
 __builtin__.enumerate.next = \
-  :rtype: (int, unknown) \n\
+  :rtype: (int, T) \n\
 
 __builtin__.filter = \
   :type function_or_none: collections.Callable or None \n\
