Added more tests and fixed a couple of bugs in Python generics

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -46,7 +46,7 @@ __builtin__.enumerate.__iter__ = \
   :rtype: enumerate of (int, T) \n\
 
 __builtin__.enumerate.next = \
-  :rtype: (int, T) \n\
+  :rtype: (int, unknown) \n\
 
 __builtin__.filter = \
   :type function_or_none: collections.Callable or None \n\
@@ -721,6 +721,9 @@ __builtin__.str.lstrip = \
   :type chars: string or None \n\
   :rtype: bytes \n\
 
+__builtin__.str.next = \
+  :rtype: bytes \n\
+
 __builtin__.str.partition = \
   :type sep: string \n\
   :rtype: (bytes, bytes, bytes) \n\
@@ -902,6 +905,9 @@ __builtin__.unicode.lower = \
 
 __builtin__.unicode.lstrip = \
   :type chars: string or None \n\
+  :rtype: unicode \n\
+
+__builtin__.unicode.next = \
   :rtype: unicode \n\
 
 __builtin__.unicode.partition = \
@@ -1288,12 +1294,12 @@ datetime.datetime.utcnow = \
   :rtype: datetime.datetime \n\
 
 datetime.datetime.fromtimestamp = \
-  :type timestamp: string \n\
+  :type timestamp: int or long or float \n\
   :type tz: datetime.tzinfo or None \n\
   :rtype: datetime.datetime \n\
 
 datetime.datetime.utcfromtimestamp = \
-  :type timestamp: string \n\
+  :type timestamp: int or long or float \n\
   :rtype: datetime.datetime \n\
 
 datetime.datetime.fromordinal = \
