--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -1393,6 +1393,175 @@ collections.Iterator.next = \
   :rtype: T \n\
 
 
+## 9.2 math
+
+math.acos = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.acosh = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.asin = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.asinh = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.atan = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.atan2 = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.atanh = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.ceil = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.copysign = \
+  :type x: int or long or float \n\
+  :type y: int or long or float \n\
+  :rtype: float \n\
+
+math.cos = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.cosh = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.degrees = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.erf = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.erfc = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.exp = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.expm1 = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.fabs = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.factorial = \
+  :type x: int or long \n\
+  :rtype: int \n\
+
+math.floor = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.fmod = \
+  :type x: int or long or float \n\
+  :type y: int or long or float \n\
+  :rtype: float \n\
+
+math.frexp = \
+  :type x: int or long or float \n\
+  :rtype: (float, int) \n\
+
+math.fsum = \
+  :type iterable: collections.Iterable of float \n\
+  :rtype: (float, int) \n\
+
+math.gamma = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.hypot = \
+  :type x: int or long or float \n\
+  :type y: int or long or float \n\
+  :rtype: float \n\
+
+math.isinf = \
+  :type x: int or long or float \n\
+  :rtype: bool \n\
+
+math.isnan = \
+  :type x: int or long or float \n\
+  :rtype: bool \n\
+
+math.ldexp = \
+  :type x: int or long or float \n\
+  :type y: int or long or float \n\
+  :rtype: float \n\
+
+math.lgamma = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.log = \
+  :type x: int or long or float \n\
+  :type base: int or long or float \n\
+  :rtype: float \n\
+
+math.log10 = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.log1p = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.modf = \
+  :type x: int or long or float \n\
+  :rtype: (float, float) \n\
+
+math.pow = \
+  :type x: int or long or float \n\
+  :type y: int or long or float \n\
+  :rtype: float \n\
+
+math.radians = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.sin = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.sinh = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.sqrt = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.tan = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.tanh = \
+  :type x: int or long or float \n\
+  :rtype: float \n\
+
+math.trunc = \
+  :type x: int or long or float \n\
+  :rtype: int \n\
+
+
 ## 9.4. decimal
 
 decimal.Decimal.as_tuple = \
