changed options name in py.test run configuration

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -552,7 +552,7 @@ runcfg.nosetests.description=Python's nosetests run configuration
 runcfg.pytest.display_name=py.test
 runcfg.pytest.description=py.test run configuration
 runcfg.pytest.target=&Target:
-runcfg.pytest.parameters=Pa&rams:
+runcfg.pytest.parameters=&Options:
 runcfg.pytest.keywords=&Keywords:
 
 ### attest run conf
