Added type database for StringIO and cStringIO (PY-5426)

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -1159,6 +1159,112 @@ __builtin__.file.writelines = \
   :type sequence_of_strings: collections.Iterable of string \n\
 
 
+## 7.5. StringIO
+
+# TODO: StringIO constructor should have type: T (bytes or unicode) -> StringIO of T
+
+StringIO.StringIO.__init__ = \
+  :type buf: T \n\
+  :rtype: StringIO.StringIO of T \n\
+
+StringIO.StringIO.__init__.1 = \
+  :type buf: bytes \n\
+  :rtype: StringIO.StringIO of bytes \n\
+
+StringIO.StringIO.__init__.2 = \
+  :type buf: unicode \n\
+  :rtype: StringIO.StringIO of unicode \n\
+
+StringIO.StringIO.getvalue = \
+  :rtype: T \n\
+
+StringIO.StringIO.isatty = \
+  :rtype: bool \n\
+
+StringIO.StringIO.next = \
+  :rtype: T \n\
+
+StringIO.StringIO.read = \
+  :type n: int or long or None \n\
+  :rtype: T \n\
+
+StringIO.StringIO.readline = \
+  :type length: int or long or None \n\
+  :rtype: T \n\
+
+StringIO.StringIO.readlines = \
+  :rtype: list of T \n\
+
+StringIO.StringIO.seek = \
+  :type position: int or long \n\
+
+StringIO.StringIO.tell = \
+  :rtype: int \n\
+
+StringIO.StringIO.write = \
+  :type s: T \n\
+  :rtype: None \n\
+
+StringIO.StringIO.writelines = \
+  :type s: collections.Iterable of T \n\
+
+StringIO.StringIO.__iter__ = \
+  :rtype: StringIO.StringIO of T \n\
+
+
+## 7.6. cStringIO
+
+cStringIO.StringIO = \
+  :type s: string \n\
+  :rtype: cStringIO.OutputType of string \n\
+
+cStringIO.StringIO.1 = \
+  :type s: bytes \n\
+  :rtype: cStringIO.OutputType of bytes \n\
+
+cStringIO.StringIO.2 = \
+  :type s: unicode \n\
+  :rtype: cStringIO.OutputType of unicode \n\
+
+cStringIO.OutputType.__init__ = \
+  :rtype: cStringIO.OutputType of T \n\
+
+cStringIO.OutputType.getvalue = \
+  :rtype: T \n\
+
+cStringIO.OutputType.isatty = \
+  :rtype: bool \n\
+
+cStringIO.OutputType.next = \
+  :rtype: T \n\
+
+cStringIO.OutputType.read = \
+  :type s: int or long or None \n\
+  :rtype: T \n\
+
+cStringIO.OutputType.readline = \
+  :rtype: T \n\
+
+cStringIO.OutputType.readlines = \
+  :rtype: list of T \n\
+
+cStringIO.OutputType.seek = \
+  :type position: int or long \n\
+
+cStringIO.OutputType.tell = \
+  :rtype: int \n\
+
+cStringIO.OutputType.write = \
+  :type s: T \n\
+  :rtype: None \n\
+
+cStringIO.OutputType.writelines = \
+  :type s: collections.Iterable of T \n\
+
+cStringIO.OutputType.__iter__ = \
+  :rtype: cStringIO.OutputType of T \n\
+
+
 ## 8.1. datetime
 
 datetime.date.today = \
