Fixed return type of 'math.fsum' (PY-5488)

--- a/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
+++ b/python/src/com/jetbrains/python/codeInsight/stdlib/StdlibTypes2.properties
@@ -1589,7 +1589,7 @@ math.frexp = \
 
 math.fsum = \
   :type iterable: collections.Iterable of float \n\
-  :rtype: (float, int) \n\
+  :rtype: float \n\
 
 math.gamma = \
   :type x: int or long or float \n\
