--- a/plugins/ui-designer/src/messages/UIDesignerBundle.properties
+++ b/plugins/ui-designer/src/messages/UIDesignerBundle.properties
@@ -546,7 +546,7 @@ action.GuiDesigner.ReloadCustomComponents.text=Reload Custom Components
 action.GuiDesigner.ReloadCustomComponents.description=Reload modified custom component classes and recreate forms
 action.NewDialog.text=Dialog
 action.NewForm.text=GUI Form
-default.field.accessibility=Default accessibility for UI-bound fields:
+default.field.accessibility=Default accessibility &for UI-bound fields\:
 plugin.com.intellij.uiDesigner.description=Provides visual editing support for Swing UI forms
 group.GuiDesigner.MainToolbarActions.text=UI Designer Toolbar Actions
 group.GuiDesigner.NewActions.text=New GUI Designer Actions
