--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -299,3 +299,5 @@ add.parentheses=Add parentheses
 add.parentheses.to.command.method.call=Add parentheses to command method call
 dollar.slash.strings.are.not.allowed.in.0=Dollar slashy strings are not allowed in Groovy {0}
 method.with.type.parameters.should.have.return.type=Method with type parameters should have return type
+primitive.type.parameters.are.not.allowed=Primitive type parameters are not allowed
+primitive.bound.types.are.not.allowed=Primitive bound types are not allowed
