--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -143,3 +143,5 @@ remove.unnecessary.semicolons.family.name=Remove unnecessary semicolons from sel
 no.unnecessary.semicolons.found=No unnecessary semicolons found
 add.return.type=Add return type
 add.return.type.to.method.declaration=Add return type to method declaration
+replace.with.wrapper=Replace with {0}
+replace.primitive.type.with.wrapper=Replace primitive type with wrapper
