more reasonable thread pool logging

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -181,6 +181,7 @@ dump.threads.on.empty.lookup.description=Whether IDEA should issue a thread dump
 
 file.structure.tree.mode=true
 
-python.new.style.resolve=false
 disable.toolwindow.overlayed=true
 disable.toolwindow.overlayed.description=Disable transparent toolwindow stripes
+
+core.pooled.threads=20
