--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -133,6 +133,8 @@ tests.passed.with.warnings.message=Tests passed (with warnings)
 junit.run.hide.passed.action.name=Hide Passed
 junit.run.hide.passed.action.description=Hide passed tests
 junit.runing.info.track.test.action.name=Track Running Test
+junit.runing.info.sort.alphabetically.action.name=Sort Alphabetically
+junit.runing.info.sort.alphabetically.action.description=Sort tests or suites alphabetically
 junit.runing.info.track.test.action.description=Select currently running test in tree
 junit.runing.info.collapse.test.action.name=Collapse all test suites
 junit.runing.info.expand.test.action.name=Expand all test suites
