--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -1147,7 +1147,7 @@ group.EditSelectGroup.text=Editor Select Actions
 group.EditCreateDeleteGroup.text=Editor Create/Delete Actions
 group.CutCopyPasteGroup.text=Cut/Copy/Paste Actions
 group.EditSelectWordGroup.text=Select Word Actions
-group.EditBookmarksGroup.text=Bookmarks
+group.EditBookmarksGroup.text=Boo_kmarks
 group.OpenProjectGroup.text=Open Project Actions
 group.EditSmartGroup.text=Edit Code Actions
 group.ProjectViewGroup.text=Project View Actions
