--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -764,7 +764,7 @@ for.loop.with.missing.component.collection.loop.option=Ignore collection iterati
 double.checked.locking.display.name=Double-checked locking
 double.checked.locking.problem.descriptor=Double-checked locking #loc
 double.checked.locking.ignore.on.volatiles.option=Ignore double-checked locking on volatile fields
-string.buffer.replaceable.by.string.display.name=Constant 'StringBuffer' may be 'String'
+string.buffer.replaceable.by.string.display.name='StringBuffer' can be replaced with 'String'
 boolean.method.name.must.start.with.question.display.name=Boolean method name must start with question word
 class.name.same.as.ancestor.name.display.name=Class name same as ancestor name
 error.rethrown.display.name='java.lang.Error' not rethrown
@@ -1044,7 +1044,7 @@ set.replaceable.by.enum.set.problem.descriptor=<code>#ref</code> replaceable wit
 inner.class.may.be.static.problem.descriptor=Inner class <code>#ref</code> may be 'static' #loc
 string.buffer.must.have.initial.capacity.problem.descriptor=<code>#ref</code> without initial capacity #loc
 string.buffer.replaceable.by.string.builder.problem.descriptor=<code>StringBuffer #ref</code> may be declared as ''StringBuilder'' #loc
-string.buffer.replaceable.by.string.problem.descriptor=Constant <code>{0} #ref</code> may be declared as ''String'' #loc
+string.buffer.replaceable.by.string.problem.descriptor=<code>{0} #ref</code> can be replaced with ''String'' #loc
 string.replaceable.by.string.buffer.problem.descriptor=Non-constant <code>String #ref</code> should probably be declared as ''StringBuilder'' #loc
 collections.must.have.initial.capacity.problem.descriptor=<code>#ref</code> without initial capacity #loc
 string.concatenation.in.loops.problem.descriptor=String concatenation <code>#ref</code> in loop #loc
