--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -676,8 +676,8 @@ action.GenerateJavadoc.description=Run the JavaDoc tool
 group.Macros.text=_Macros
 group.Macros.description=View, Change, Record, Play Macros
 group.StanardMacroActions.text=Standard Macro Actions
-action.PlaybackLastMacro.text=Pla_yback Last Macro
-action.PlaybackLastMacro.description=Playback last used macro
+action.PlaybackLastMacro.text=Pla_y Back Last Macro
+action.PlaybackLastMacro.description=Play Back last used macro
 action.StartStopMacroRecording.text=Start/Stop Macro _Recording
 action.StartStopMacroRecording.description=Start/Stop recording of a new macro
 action.EditMacros.text=_Edit Macros
