let "'StringBuffer' can be replaced with 'String'" inspection report more cases

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1045,6 +1045,7 @@ inner.class.may.be.static.problem.descriptor=Inner class <code>#ref</code> may b
 string.buffer.must.have.initial.capacity.problem.descriptor=<code>#ref</code> without initial capacity #loc
 string.buffer.replaceable.by.string.builder.problem.descriptor=<code>StringBuffer #ref</code> may be declared as ''StringBuilder'' #loc
 string.buffer.replaceable.by.string.problem.descriptor=<code>{0} #ref</code> can be replaced with ''String'' #loc
+new.string.buffer.replaceable.by.string.problem.descriptor=<code>#ref</code> can be replaced with 'String' #loc
 string.replaceable.by.string.buffer.problem.descriptor=Non-constant <code>String #ref</code> should probably be declared as ''StringBuilder'' #loc
 collections.must.have.initial.capacity.problem.descriptor=<code>#ref</code> without initial capacity #loc
 string.concatenation.in.loops.problem.descriptor=String concatenation <code>#ref</code> in loop #loc
