compile-server: added custom VM options

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -128,6 +128,9 @@ compiler.max.static.constants.searches.description=If the number of changed comp
 compiler.server.heap.size=300
 compiler.server.heap.size.description=Heap size value in MB for the compile server process
 
+compiler.server.vm.options=-ea
+compiler.server.vm.options.description=Additional options for compile server's VM
+
 compiler.server.use.memory.temp.cache=true
 compiler.server.use.memory.temp.cache.description=Store temporary data in memory for faster compilation; requires larger server heap size
 
