ToolbarDecorator for PathEditor

--- a/platform/platform-resources-en/src/messages/ProjectBundle.properties
+++ b/platform/platform-resources-en/src/messages/ProjectBundle.properties
@@ -64,7 +64,7 @@ sdk.list.name.required.error=Please specify SDK name
 sdk.list.unique.name.required.error=Please specify a different SDK name
 button.add=Add
 button.remove=Remove
-sdk.paths.specify.url.button=&Specify URL...
+sdk.paths.specify.url.button=Specify URL...
 sdk.configure.title=Configure SDK
 sdk.configure.save.settings.error=Cannot Save Settings
 sdk.configure.editor.title=SDK Editor
