--- a/plugins/ui-designer/src/messages/UIDesignerBundle.properties
+++ b/plugins/ui-designer/src/messages/UIDesignerBundle.properties
@@ -179,7 +179,7 @@ error.cannot.create.field.reason=Cannot create field ''{0}''.\nReason: {1}
 tooltip.press.accelerator=Click or press {0}
 property.not.defined=<not defined>
 editbox.class.2=C&lass:
-radio.bind.to.existing.bean=Bind to &existing bean
+radio.bind.to.existing.bean=Bind to existing &bean
 editbox.package=&Package:
 radio.create.new.bean=Cre&ate new bean
 column.form.field=Form Field
