EA-32658 - initialize field in method while introduce field

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/refactoring/GroovyRefactoringBundle.properties
@@ -26,7 +26,6 @@ declare.final=Declare final
 press.escape.to.remove.the.highlighting=Press Escape to remove the highlighting
 specify.the.type.explicitly=Specify the type explicitly
 variable.of.type=Variable of type:
-name.prompt=Name:
 selected.expression.has.void.type=Selected expression has void type
 selected.expression.in.command.expression=Selected expression is part of command expression
 introduced.variable.conflicts.with.parameter.0=Introduced variable will conflict with parameter {0}
@@ -44,14 +43,12 @@ cannot.find.a.single.definition.to.inline.field=No initializer present for the f
 inline.local.command=Inline Variable
 local.varaible.is.lvalue=Variable to be inlined has occurrence as lvalue in assignment
 inline.local.variable.prompt.0.1=Inline local variable ''{0}''?
-inline.field.prompt=Inline field ''{0}''?
 
 ########################################################################################################################
 # Extract method
 ########################################################################################################################
 extract.method.title=Extract Method
 selected.block.should.represent.a.statement.set=Selected block should represent a set of statements or an expression
-cannot.perform.analysis=Code analysis cannot be performed
 multiple.output.values=There are multiple output values for the selected code fragment
 selected.block.contains.invocation.of.another.class.constructor=Selected block contains invocation of another class constructor
 specify.type.label=Specify return &type explicitly
@@ -84,7 +81,6 @@ refactoring.is.not.supported.when.return.statement.interrupts.the.execution.flow
 refactoring.is.not.supported.for.recursive.methods=Refactoring is not supported for recursive methods
 refactoring.cannot.be.applied.to.constructors=Refactoring cannot be applied to constructors
 refactoring.is.not.supported.in.parameter.initializers=Refactoring is not supported in parameter initializers
-multiple.method.inline.is.not.suppored=Multiple method inline is not supported
 inline.method.prompt.0=Inline method ''{0}'' invocation?
 refactoring.is.available.only.for.method.calls=Refactoring is available only for method calls
 method.is.not.accessible.form.context.0=Method {0} used in inlined method is not accessible from call site
@@ -127,7 +123,7 @@ refactored.method.will.cover.closure.property=Refactored method will override cl
 changeSignature.not.throwable.type=Wrong type: ''{0}'' for exception, should extend java.lang.Throwable
 changeSignature.wrong.type.for.exception=Wrong type: ''{0}'' for exception
 changeSignature.no.type.for.exception=Specify a type for exception
-no.occurences.found=No occurences found
+no.occurrences.found=No occurrences found
 expression.is.not.constant=Selected expression is not a constant
 class.does.not.exists=Class {0} does not exists
 class.does.not.exist.in.the.module=Class does not exists in the module. Do you want to create it?
