Web module type description

--- a/platform/platform-resources-en/src/messages/ProjectBundle.properties
+++ b/platform/platform-resources-en/src/messages/ProjectBundle.properties
@@ -223,7 +223,7 @@ module.unknown.type.single.error=Cannot determine module type (\"{1}\") for the 
 module.unknown.type.multiple.error=Cannot determine module type for the following modules:\n{0}\nAll mentioned modules will be treated as Unknown modules.
 module.unknown.type.title=Unknown Module Type
 module.web.title=Web Module
-module.web.description=Provides facilities for developing web applications.
+module.web.description=Creates an empty module that enables developing web applications using HTML/HTML5, PHP, JavaScript, and style sheets.
 module.remove.from.project.confirmation=Would you like to remove module ''{0}'' from the project?
 element.kind.name.module=module
 module.file.does.not.exist.error=File {0} does not exist
