Fix "Field repeatedly accessed in method" inspection problem descriptor

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -460,7 +460,7 @@ large.array.allocation.no.outofmemoryerror.problem.descriptor=Large array alloca
 large.array.allocation.no.outofmemoryerror.maximum.number.of.elements.option=Maximum number of elements:
 connection.opened.not.safely.closed.display.name=Connection opened but not safely closed
 field.repeatedly.accessed.in.method.display.name=Field repeatedly accessed in method
-field.repeatedly.accessed.in.method.problem.descriptor=Field ''{0}'' accessed repeatedly in method <code>#ref(0</code> #loc
+field.repeatedly.accessed.in.method.problem.descriptor=Field ''{0}'' accessed repeatedly in method <code>#ref()</code> #loc
 field.repeatedly.accessed.in.method.ignore.option=Ignore final fields
 interface.one.inheritor.display.name=Interface which has only one direct inheritor
 interface.one.inheritor.problem.descriptor=Interface <code>#ref</code> has only one direct inheritor #loc
