Add dynamic property and method refactored

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -215,8 +215,8 @@ add.dynamic.method=Add Dynamic Method
 dynamic.type=Type
 dynamic.name=Name
 dynamic.properties.table.name=Method arguments
-dynamic.method.return.type=Return type
-dynamic.method.property.type=Property type
+dynamic.method.return.type=Return &type:
+dynamic.method.property.type=Property &type:
 are.you.sure.to.delete.dynamic.property=Are you sure to delete ''{0}''?
 dynamic.property.deletion=Deletion Dynamic Property
 are.you.sure.to.delete.elements=Are you sure to delete ''{0}'' elements?
